Deployment/kubernetes/eks/production/frontend/document.yaml
apiVersion: v1
kind: Service
metadata:
  name: document
  namespace: frontend
  labels:
    app: document
spec:
  type: NodePort
  ports:
  - port: 80    
  selector:
    app: document
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: document
  namespace: frontend 
spec:
  selector:
    matchLabels:
      app: document
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: document
    spec:
      containers:
      - name: document
        image: pigeatgarlic/document:2021-12-20
        imagePullPolicy: Always
        resources:
          requests:
            memory: "100Mi"
            cpu: "100m"
          limits:
            memory: "200Mi"
            cpu: "200m"
        ports:
        - containerPort: 80
