Deployment/kubernetes/eks/production/frontend/landing-page.yaml
apiVersion: v1
kind: Service
metadata:
  name: landing-page
  namespace: frontend
  labels:
    app: landing-page
spec:
  type: NodePort
  ports:
  - port: 80    
  selector:
    app: landing-page
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing-page
  namespace: frontend 
spec:
  selector:
    matchLabels:
      app: landing-page
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: landing-page
    spec:
      containers:
      - name: landing-page
        image: pigeatgarlic/landing-page:2022-03-04
        imagePullPolicy: Always
        resources:
          requests:
            memory: "300Mi"
            cpu: "300m"
          limits:
            memory: "500Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
      nodeSelector:
        topology.kubernetes.io/zone: ap-southeast-1a
