Deployment/kubernetes/eks/production/frontend/service-page.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-page
  namespace: frontend
  labels:
    app: service-page
spec:
  type: ClusterIP
  ports:
  - port: 80    
  selector:
   app: service-page
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-page
  namespace: frontend
spec:
  selector:
    matchLabels:
      app: service-page
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: service-page
    spec:
      containers:
      - name: service-page
        image: pigeatgarlic/service-page:2022-02-17

        imagePullPolicy: Always
        resources:
          requests:
            memory: "500Mi"
            cpu: "500m"
          limits:
            memory: "700Mi"
            cpu: "700m"
        ports:
        - containerPort: 80
      nodeSelector:
        node.kubernetes.io/instance-type: t3a.small
